# hash-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  GIT_RELEASE_GUIDE.md  GUI_REFACTORING.md  PROJECT_COMPLETION.md  README.md  RELEASE_COMPLETION.md  SECURITY.md  hash-forge-v1.1.0-darwin-arm64.tar.gz.sha256  hash-forge-v1.1.0-darwin-arm64.zip.sha256  release.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: README.md
docs/: index.html  script.js  style.css
docs-dev/: README.md
docs-dev/gui/: GUI_ENHANCEMENT.md  GUI_README.md
docs-dev/phase1/: PHASE1_COMPLETION_REPORT.md  PHASE1_IMPLEMENTATION.md
docs-dev/releases/: GITHUB_RELEASE_TEXT.md  RELEASE.md  RELEASE_v1.1.0.md
release-v1.1.0/: hash-forge-cli  hash-forge-gui
release-v1.1.0/docs/: index.html
scripts/: build-macos-dmg.sh  build.sh  check-release-readiness.sh  demo_phase1.sh  release.sh  test_gui_phase1.sh
src/: algorithms.rs  cli.rs  core.rs  gui_core.rs  gui_main.rs  hmac_core.rs  lib.rs  main.rs  output.rs  utils.rs
src/gui/: algorithms.rs  app_state.rs  compute.rs  mod.rs  ui.rs
