[package]
name = "hash-forge"
version = "1.0.0"
edition = "2021"
description = "Professional hash generator and verifier with CLI and GUI interfaces"
license = "MIT"
repository = "https://github.com/fra2404/hash-forge"
homepage = "https://fra2404.github.io/hash-forge/"
keywords = ["hash", "crypto", "security", "cli", "gui"]
categories = ["command-line-utilities", "cryptography", "gui"]
authors = ["Francesco <fra2404@users.noreply.github.com>"]

[[bin]]
name = "hash-forge"
path = "src/main.rs"

[[bin]]
name = "hash-forge-gui"
path = "src/gui_main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Cryptographic hash algorithms
digest = "0.10"        # Common digest trait
sha2 = "0.10"          # SHA-256, SHA-512
sha1 = "0.10"          # SHA-1 (legacy)
md5 = "0.7"            # MD5 (legacy)
blake2 = "0.10"        # BLAKE2b, BLAKE2s
blake3 = "1.5"         # BLAKE3 (modern)

# Password hashing
bcrypt = "0.15"        # bcrypt
scrypt = "0.11"        # scrypt
argon2 = "0.5"         # Argon2 (recommended)

# HMAC support
hmac = "0.12"

# Encoding
hex = "0.4"
base64 = "0.22"

# File I/O and progress
indicatif = "0.17"
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GUI dependencies
eframe = { version = "0.28", optional = true }
egui = { version = "0.28", optional = true }
egui_extras = { version = "0.28", optional = true, features = ["file"] }
rfd = { version = "0.14", optional = true }  # File dialogs

# System integration
open = { version = "5.1", optional = true }

[features]
default = ["gui"]
gui = ["eframe", "egui", "egui_extras", "rfd", "open"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
